seafile/seafile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile
  namespace: seafile
spec:
  selector:
    app: seafile
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
