seafile/seafile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile
  namespace: seafile
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: seafile.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: seafile
            port:
              name: http
  tls:
    - hosts:
        - seafile.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
